--- a/Ops/AWS/S3.md
+++ b/Ops/AWS/S3.md
@@ -8,10 +8,13 @@
 
 ## Evaluation
 
+ When you feel that you have mastered the competencies above, and you're ready for an evaluation, please request a 30 minute meeting with the subject master listed on the badge.
+
+## Subject matter expert
 
 ## Suggested Learning
 
- - [https://linuxacademy.com/cp/courses/lesson/course/706/lesson/4/module/84](https://linuxacademy.com/cp/courses/lesson/course/706/lesson/4/module/84) 
+ - [https://linuxacademy.com/cp/courses/lesson/course/706/lesson/4/module/84](https://linuxacademy.com/cp/courses/lesson/course/706/lesson/4/module/84)
  - [https://linuxacademy.com/cp/courses/lesson/course/4608/lesson/2/module/341](https://linuxacademy.com/cp/courses/lesson/course/4608/lesson/2/module/341)
  - [https://linuxacademy.com/cp/courses/lesson/course/2967/lesson/1/module/241](https://linuxacademy.com/cp/courses/lesson/course/2967/lesson/1/module/241)
  - [https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/1/module/241](https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/1/module/241)
