--- a/Ops/AWS/S3.md
+++ b/Ops/AWS/S3.md
@@ -3,7 +3,7 @@
 ## Competencies
 
  - Understand the S3 bucket concept in AWS
- - Understand how S3 bucket works. [How does the content replicates, etc]
+ - Understand how S3 bucket works. [How does the content replicate, etc]
  - Understand how to create and delete a bucket in AWS
 
 ## Evaluation
@@ -21,6 +21,8 @@ Hector Rosales - Email: hector.rosales@acklenavenue.com
  - [https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/1/module/241](https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/1/module/241)
  - [https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/2/module/241](https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/2/module/241)
 
+## Badge
+After you have been evaluated you can claim the badge using [this link](https://badge-claim.herokuapp.com/badgeid/vskRxnJtTcGHYWergoJPBA).
 # S3 Mastery Badge Level 2
 
 ## Competencies
