--- a/Ops/AWS/S3.md
+++ b/Ops/AWS/S3.md
@@ -2,9 +2,9 @@
 
 ## Competencies
 
- - Understand the S3 bucket concept in AWS
- - Understand how S3 bucket works. [How does the content replicate, etc]
- - Understand how to create and delete a bucket in AWS
+ - Explain the S3 bucket concept in AWS
+ - Explain how S3 bucket works. [How does the content replicate, etc]
+ - Be able to create and delete a bucket in AWS
 
 ## Evaluation
 
@@ -26,6 +26,12 @@ After you have been evaluated you can claim the badge using [this link](https://
 # S3 Mastery Badge Level 2
 
 ## Competencies
+
+ - Be able to:
+    - Setup a static website
+    - Set up permissions: 
+        - Create a public bucket
+        - Setup permission to specific objects
 
 ## Evaluation
 
