Adding competencies for design thinking badges

--- a/design/UX/UX 101.md
+++ b/design/UX/UX 101.md
@@ -19,6 +19,7 @@
 ## Champion
 
 * [Wendy Vargas](mailto:wendy.vargas@acklenavenue.com)
+* [Fernando Guevara](mailto:fernando@acklenavenue.com)
 
 ## Claiming Your Badge:
 When the badge champion authorizes it, you may click the link to claim the badge.
