Adding updates for files in the folders and missing badge information.

--- a/design/UX/UX 101.md
+++ b/design/UX/UX 101.md
@@ -6,17 +6,17 @@
 
 ## Competencies:
 * Able to understand and explain what the UX Field and Role are all about.
-* Able to know and understand your users.
+* Able to know and understand your users in order to meet their needs.
 * Able to define design goals, ideas, and solutions.
+* Able to find harmony between UX and Agile.
 
 ## Evaluation:
+* Complete this course: [Intro to User Experience Design](https://courses.springboard.com/p/getting-started-with-user-experience-design)
+* Read the following book (Make sure to read 1-9, just change the number in the url): [Principles of UX Design](http://get.invisionapp.com/chapter-1-of-9-principles-of-ux-design)
+* Read the following article: [Agile Is not Easy for UX: (How to) Deal with It](https://www.nngroup.com/articles/agile-not-easy-ux/)
 * Schedule a 30-minute session with the related badge champion. You will need to be able to discuss and/or demonstrate the competencies above freely.
 
-## Suggested Learning
-* [Intro to User Experience Design](https://courses.springboard.com/p/getting-started-with-user-experience-design)
-* [Principles of UX Design](http://get.invisionapp.com/chapter-1-of-9-principles-of-ux-design)
-
-## Champion
+## Available as badge Champion:
 
 * [Wendy Vargas](mailto:wendy.vargas@acklenavenue.com)
 * [Fernando Guevara](mailto:fernando@acklenavenue.com)
