Adding edits for several badges

--- a/design/UX/UX101.md
+++ b/design/UX/UX101.md
@@ -1,8 +1,6 @@
 # UX 101
 
-## Intro:
-
-* This is an introductory badge. Students will posess basic knowledge about UX Design and will sharpen their knowledge with the following badges.
+This is an introductory badge. Students will posess basic knowledge about UX Design and will sharpen their knowledge with the following badges.
 
 ## Competencies:
 * Able to understand and explain what the UX Field and Role are all about.
@@ -19,7 +17,6 @@
 ## Available as badge Champion:
 
 * [Wendy Vargas](mailto:wendy.vargas@acklenavenue.com)
-* [Fernando Guevara](mailto:fernando@acklenavenue.com)
 
 ## Claiming Your Badge:
 When the badge champion authorizes it, you may click the link to claim the badge.
