Adding modifications to badges and adding new ones

--- a/design/UX/UX101.md
+++ b/design/UX/UX101.md
@@ -19,4 +19,4 @@ This is an introductory badge. Students will posess basic knowledge about UX Des
 * [Wendy Vargas](mailto:wendy.vargas@acklenavenue.com)
 
 ## Claiming Your Badge:
-When the badge champion authorizes it, you may click the link to claim the badge.
+When the badge champion authorizes it, you may click the link to claim the badge in Badgr.
