--- a/ops/aws/S3.md
+++ b/ops/aws/S3.md
@@ -22,5 +22,5 @@ Hector Rosales - Email: hector.rosales@acklenavenue.com
  - [https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/1/module/241](https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/1/module/241)
  - [https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/2/module/241](https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/2/module/241)
 
-## Badge
-After you have been evaluated you can claim the badge using [this link](https://acklenavenue.badgr.com/public/badges/vskRxnJtTcGHYWergoJPBA).
+## Claim Badge:
+Please click the **Claim Badge** button below *(Chrome extension required)*
