--- a/ops/aws/S3.md
+++ b/ops/aws/S3.md
@@ -23,4 +23,4 @@ Hector Rosales - Email: hector.rosales@acklenavenue.com
  - [https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/2/module/241](https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/2/module/241)
 
 ## Claim Badge:
-Please click the **Claim Badge** button below *(Chrome extension required)*
+After you evaluation please click the **Claim Badge** button *(Chrome extension required)* [here](https://acklenavenue.badgr.com/public/badges/vskRxnJtTcGHYWergoJPBA)
