--- a/ops/aws/S3.md
+++ b/ops/aws/S3.md
@@ -16,11 +16,15 @@ Hector Rosales - Email: hector.rosales@acklenavenue.com
 
 ## Suggested Learning
 
- - [https://linuxacademy.com/cp/courses/lesson/course/706/lesson/4/module/84](https://linuxacademy.com/cp/courses/lesson/course/706/lesson/4/module/84)
- - [https://linuxacademy.com/cp/courses/lesson/course/4608/lesson/2/module/341](https://linuxacademy.com/cp/courses/lesson/course/4608/lesson/2/module/341)
- - [https://linuxacademy.com/cp/courses/lesson/course/2967/lesson/1/module/241](https://linuxacademy.com/cp/courses/lesson/course/2967/lesson/1/module/241)
- - [https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/1/module/241](https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/1/module/241)
- - [https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/2/module/241](https://linuxacademy.com/cp/courses/lesson/course/2751/lesson/2/module/241)
+
+**Learn Cantrill (AWS Certified Solutions Architect Associate - SAA-C02)**
+ - [ AWS Fundamentals - *Simple Storage Service (S3) Basics*](https://learn.cantrill.io/courses/aws-certified-solutions-architect-associate-saa-c02/lectures/14041055)
+ - [ AWS Fundamentals - *My First S3 Bucket (Demo)*](https://learn.cantrill.io/courses/aws-certified-solutions-architect-associate-saa-c02/lectures/14041058)
+
+**A Cloud Guru (AWS Certified Solutions Architect Associate SAA-C02)**
+ - [ Identity and Access Management & S3 - *S3 101*](https://learn.acloud.guru/course/aws-certified-solutions-architect-associate/learn/iam-s3/s3-101/watch)
+ - [ Identity and Access Management & S3 - *Create an S3 Bucket (Demo)*](https://learn.acloud.guru/course/aws-certified-solutions-architect-associate/learn/iam-s3/create-bucket/watch)
+
 
 ## Claim Badge:
 After you evaluation please click the **Claim Badge** button *(Chrome extension required)* [here](https://acklenavenue.badgr.com/public/badges/vskRxnJtTcGHYWergoJPBA)
